# tipkr

./: .gitignore  CMakeLists.txt  Food.cpp  Food.h  Game.cpp  Game.h  Input.cpp  Input.h  README.md  Renderer.cpp  Renderer.h  Score.cpp  Score.h  Snake.cpp  Snake.h  main.cpp
data/: resources.rc
libs/SDL2_ttf-2.20.2/x86_64-w64-mingw32/include/SDL2/: SDL_ttf.h
